Adjusting .deleteIcon background-size to fix rendering on firefox / chrome.

--- a/src/common/components/repository-row/icons/icons.css
+++ b/src/common/components/repository-row/icons/icons.css
@@ -20,6 +20,7 @@
 .deleteIcon {
   composes: icon;
   background-image: url(https://assets.ubuntu.com/v1/b5573b6a-delete.svg);
+  background-size: auto 100%;
 }
 
 .warningIcon {
